--- a/algos/index.html
+++ b/algos/index.html
@@ -19,7 +19,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <script src="./training.js" async defer></script>
+    <script src="./src/training.js" async defer></script>
+    <script src="./src/functional-programming.js" async defer></script>
 </body>
 
 </html>
